Updated website code - latest version

--- a/contact.html
+++ b/contact.html
@@ -129,8 +129,8 @@
                                     class="w-full px-4 py-3 border-2 border-gray-200 rounded-2xl focus:border-[#FFC107] focus:outline-none transition-colors duration-300">
                             </div>
                             <div>
-                                <label for="phone" class="block text-sm font-semibold text-[#001F3F] mb-2">Phone</label>
-                                <input type="tel" id="phone" name="phone"
+                                <label for="phone" class="block text-sm font-semibold text-[#001F3F] mb-2">Phone *</label>
+                                <input type="tel" id="phone" name="phone" required
                                     class="w-full px-4 py-3 border-2 border-gray-200 rounded-2xl focus:border-[#FFC107] focus:outline-none transition-colors duration-300">
                             </div>
                             <div>
