--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
                       
                     </div>
                 </div>
-                <div class="hero-image hidden md:block">
-                    <div class="relative">
+                <div class="hero-image mt-12 md:mt-0">
+                    <div class="relative mx-auto max-w-md md:max-w-none">
                         <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?w=800&h=600&fit=crop"
                             alt="Business Excellence"
                             class="rounded-2xl shadow-2xl transform hover:scale-105 transition-transform duration-500">
