--- a/contact.html
+++ b/contact.html
@@ -230,7 +230,7 @@
                             <div>
                                 <h3 class="text-xl font-semibold text-[#001F3F] mb-2 uppercase">Delhi NCR & Mumbai
                                     Locations</h3>
-                                <p class="text-[#333333]">Delhi NCR, Mumbai</p>
+                                <p class="text-[#333333]">Mumbai</p>
                             </div>
                         </div>
                     </div>
