--- a/contact.html
+++ b/contact.html
@@ -56,40 +56,40 @@
                 </a>
                 <div class="hidden md:flex items-center space-x-8">
                     <a href="index.html"
-                        class="text-[#333333] hover:text-[#FFC107] transition-colors duration-300">Home</a>
+                        class="text-[#333333] hover:text-[#D99024] transition-colors duration-300">Home</a>
                     <a href="about.html"
-                        class="text-[#333333] hover:text-[#FFC107] transition-colors duration-300">About</a>
+                        class="text-[#333333] hover:text-[#D99024] transition-colors duration-300">About</a>
                     <a href="services.html"
-                        class="text-[#333333] hover:text-[#FFC107] transition-colors duration-300">Services</a>
+                        class="text-[#333333] hover:text-[#D99024] transition-colors duration-300">Services</a>
                     <a href="journey.html"
-                        class="text-[#333333] hover:text-[#FFC107] transition-colors duration-300">Journey</a>
+                        class="text-[#333333] hover:text-[#D99024] transition-colors duration-300">Journey</a>
                 </div>
                 <a href="contact.html"
-                    class="hidden md:block bg-gradient-to-r from-[#FFC107] to-[#FFB300] text-[#001F3F] px-6 py-2.5 rounded-full font-semibold text-sm hover:shadow-lg hover:scale-105 transition-all duration-300">
+                    class="hidden md:block bg-gradient-to-r from-[#D99024] to-[#B8790A] text-[#0C2D48] px-6 py-2.5 rounded-full font-semibold text-sm hover:shadow-lg hover:scale-105 transition-all duration-300">
                     Get in Touch
                 </a>
-                <button id="mobile-menu-btn" class="md:hidden text-[#001F3F]">
+                <button id="mobile-menu-btn" class="md:hidden text-[#0C2D48]">
                     <i data-lucide="menu" class="w-6 h-6"></i>
                 </button>
             </div>
             <div id="mobile-menu" class="hidden md:hidden mt-4 space-y-2 pb-4">
-                <a href="index.html" class="block text-[#333333] py-2 hover:text-[#FFC107] transition-colors">Home</a>
-                <a href="about.html" class="block text-[#333333] py-2 hover:text-[#FFC107] transition-colors">About</a>
+                <a href="index.html" class="block text-[#333333] py-2 hover:text-[#D99024] transition-colors">Home</a>
+                <a href="about.html" class="block text-[#333333] py-2 hover:text-[#D99024] transition-colors">About</a>
                 <a href="services.html"
-                    class="block text-[#333333] py-2 hover:text-[#FFC107] transition-colors">Services</a>
+                    class="block text-[#333333] py-2 hover:text-[#D99024] transition-colors">Services</a>
                 <a href="journey.html"
-                    class="block text-[#333333] py-2 hover:text-[#FFC107] transition-colors">Journey</a>
-                <a href="contact.html" class="block font-semibold text-[#001F3F] py-2 nav-active">Contact</a>
+                    class="block text-[#333333] py-2 hover:text-[#D99024] transition-colors">Journey</a>
+                <a href="contact.html" class="block font-semibold text-[#0C2D48] py-2 nav-active">Contact</a>
             </div>
         </nav>
     </header>
 
     <!-- HERO SECTION -->
     <section class="hero-section relative overflow-hidden min-h-[50vh] flex items-center">
-        <div class="absolute inset-0 bg-gradient-to-br from-[#001F3F] via-[#002B5B] to-[#001F3F]"></div>
+        <div class="absolute inset-0 bg-gradient-to-br from-[#0C2D48] via-[#174C72] to-[#0C2D48]"></div>
         <div class="absolute inset-0 opacity-20">
-            <div class="absolute top-20 left-10 w-72 h-72 bg-[#FFC107] rounded-full blur-3xl"></div>
-            <div class="absolute bottom-20 right-10 w-96 h-96 bg-[#002B5B] rounded-full blur-3xl"></div>
+            <div class="absolute top-20 left-10 w-72 h-72 bg-[#D99024] rounded-full blur-3xl"></div>
+            <div class="absolute bottom-20 right-10 w-96 h-96 bg-[#174C72] rounded-full blur-3xl"></div>
         </div>
         <div class="container mx-auto px-4 lg:px-8 relative z-10 py-32 md:py-40">
             <div class="text-center text-white fade-up">
@@ -112,35 +112,35 @@
                 <!-- Contact Form (Glass Card) -->
                 <div class="fade-up">
                     <div class="glass-card bg-white/80 backdrop-blur-md p-8 rounded-2xl shadow-xl">
-                        <h2 class="text-3xl font-bold text-[#001F3F] mb-6 uppercase">Get in Touch</h2>
+                        <h2 class="text-3xl font-bold text-[#0C2D48] mb-6 uppercase">Get in Touch</h2>
                         <p class="text-[#333333] mb-8">
                             Fill out the form below and we'll get back to you within 24 hours.
                         </p>
                         <form id="contact-form" class="space-y-6">
                             <div>
-                                <label for="name" class="block text-sm font-semibold text-[#001F3F] mb-2">Name *</label>
+                                <label for="name" class="block text-sm font-semibold text-[#0C2D48] mb-2">Name *</label>
                                 <input type="text" id="name" name="name" required
-                                    class="w-full px-4 py-3 border-2 border-gray-200 rounded-2xl focus:border-[#FFC107] focus:outline-none transition-colors duration-300">
+                                    class="w-full px-4 py-3 border-2 border-gray-200 rounded-2xl focus:border-[#D99024] focus:outline-none transition-colors duration-300">
                             </div>
                             <div>
-                                <label for="email" class="block text-sm font-semibold text-[#001F3F] mb-2">Email
+                                <label for="email" class="block text-sm font-semibold text-[#0C2D48] mb-2">Email
                                     *</label>
                                 <input type="email" id="email" name="email" required
-                                    class="w-full px-4 py-3 border-2 border-gray-200 rounded-2xl focus:border-[#FFC107] focus:outline-none transition-colors duration-300">
+                                    class="w-full px-4 py-3 border-2 border-gray-200 rounded-2xl focus:border-[#D99024] focus:outline-none transition-colors duration-300">
                             </div>
                             <div>
-                                <label for="phone" class="block text-sm font-semibold text-[#001F3F] mb-2">Phone *</label>
+                                <label for="phone" class="block text-sm font-semibold text-[#0C2D48] mb-2">Phone *</label>
                                 <input type="tel" id="phone" name="phone" required
-                                    class="w-full px-4 py-3 border-2 border-gray-200 rounded-2xl focus:border-[#FFC107] focus:outline-none transition-colors duration-300">
+                                    class="w-full px-4 py-3 border-2 border-gray-200 rounded-2xl focus:border-[#D99024] focus:outline-none transition-colors duration-300">
                             </div>
                             <div>
-                                <label for="message" class="block text-sm font-semibold text-[#001F3F] mb-2">Message
+                                <label for="message" class="block text-sm font-semibold text-[#0C2D48] mb-2">Message
                                     *</label>
                                 <textarea id="message" name="message" rows="5" required
-                                    class="w-full px-4 py-3 border-2 border-gray-200 rounded-2xl focus:border-[#FFC107] focus:outline-none transition-colors duration-300 resize-none"></textarea>
+                                    class="w-full px-4 py-3 border-2 border-gray-200 rounded-2xl focus:border-[#D99024] focus:outline-none transition-colors duration-300 resize-none"></textarea>
                             </div>
                             <button type="submit"
-                                class="w-full bg-gradient-to-r from-[#FFC107] to-[#FFB300] text-[#001F3F] px-8 py-4 rounded-full font-semibold text-lg hover:shadow-2xl hover:scale-105 transition-all duration-300">
+                                class="w-full bg-gradient-to-r from-[#D99024] to-[#B8790A] text-[#0C2D48] px-8 py-4 rounded-full font-semibold text-lg hover:shadow-2xl hover:scale-105 transition-all duration-300">
                                 Send Message
                             </button>
                             <!-- Success Message (Hidden by default) -->
@@ -155,7 +155,7 @@
 
                 <!-- Contact Information -->
                 <div class="fade-up">
-                    <h2 class="text-3xl font-bold text-[#001F3F] mb-6 uppercase">Our Offices & Contact Details</h2>
+                    <h2 class="text-3xl font-bold text-[#0C2D48] mb-6 uppercase">Our Offices & Contact Details</h2>
                     <p class="text-[#333333] mb-8">
                         Reach out to us through any of these channels. We're here to help!
                     </p>
@@ -166,13 +166,13 @@
                             class="glass-card bg-white/80 backdrop-blur-md p-6 rounded-2xl shadow-lg hover:shadow-xl transition-all duration-300 hover:-translate-y-1">
                             <div class="flex items-start">
                                 <div
-                                    class="w-14 h-14 bg-gradient-to-br from-[#FFC107] to-[#FFB300] rounded-2xl flex items-center justify-center mr-4 flex-shrink-0">
-                                    <i data-lucide="phone" class="w-7 h-7 text-[#001F3F]"></i>
+                                    class="w-14 h-14 bg-gradient-to-br from-[#D99024] to-[#B8790A] rounded-2xl flex items-center justify-center mr-4 flex-shrink-0">
+                                    <i data-lucide="phone" class="w-7 h-7 text-[#0C2D48]"></i>
                                 </div>
                                 <div>
-                                    <h3 class="text-xl font-semibold text-[#001F3F] mb-2">Phone</h3>
+                                    <h3 class="text-xl font-semibold text-[#0C2D48] mb-2">Phone</h3>
                                     <a href="tel:+917838837590"
-                                        class="text-[#333333] hover:text-[#FFC107] transition-colors duration-300">
+                                        class="text-[#333333] hover:text-[#D99024] transition-colors duration-300">
                                         +91 7838837590
                                     </a>
                                 </div>
@@ -184,13 +184,13 @@
                             class="glass-card bg-white/80 backdrop-blur-md p-6 rounded-2xl shadow-lg hover:shadow-xl transition-all duration-300 hover:-translate-y-1">
                             <div class="flex items-start">
                                 <div
-                                    class="w-14 h-14 bg-gradient-to-br from-[#002B5B] to-[#001F3F] rounded-2xl flex items-center justify-center mr-4 flex-shrink-0">
+                                    class="w-14 h-14 bg-gradient-to-br from-[#174C72] to-[#0C2D48] rounded-2xl flex items-center justify-center mr-4 flex-shrink-0">
                                     <i data-lucide="mail" class="w-7 h-7 text-white"></i>
                                 </div>
                                 <div>
-                                    <h3 class="text-xl font-semibold text-[#001F3F] mb-2">Email</h3>
+                                    <h3 class="text-xl font-semibold text-[#0C2D48] mb-2">Email</h3>
                                     <a href="mailto:info@backbridge.in"
-                                        class="text-[#333333] hover:text-[#FFC107] transition-colors duration-300">
+                                        class="text-[#333333] hover:text-[#D99024] transition-colors duration-300">
                                         info@backbridge.in
                                     </a>
                                 </div>
@@ -202,11 +202,11 @@
                             class="glass-card bg-white/80 backdrop-blur-md p-6 rounded-2xl shadow-lg hover:shadow-xl transition-all duration-300 hover:-translate-y-1">
                             <div class="flex items-start">
                                 <div
-                                    class="w-14 h-14 bg-gradient-to-br from-[#FFC107] to-[#FFB300] rounded-2xl flex items-center justify-center mr-4 flex-shrink-0">
-                                    <i data-lucide="map-pin" class="w-7 h-7 text-[#001F3F]"></i>
+                                    class="w-14 h-14 bg-gradient-to-br from-[#D99024] to-[#B8790A] rounded-2xl flex items-center justify-center mr-4 flex-shrink-0">
+                                    <i data-lucide="map-pin" class="w-7 h-7 text-[#0C2D48]"></i>
                                 </div>
                                 <div>
-                                    <h3 class="text-xl font-semibold text-[#001F3F] mb-2 uppercase">Delhi NCR & Mumbai
+                                    <h3 class="text-xl font-semibold text-[#0C2D48] mb-2 uppercase"> Mumbai
                                         Locations</h3>
                                     <p class="text-[#333333]">Delhi NCR, Mumbai</p>
                                 </div>
@@ -220,7 +220,7 @@
                         class="glass-card bg-white/80 backdrop-blur-md p-6 rounded-2xl shadow-lg hover:shadow-xl transition-all duration-300 hover:-translate-y-1">
                         <div class="flex items-start">
                             <div
-                                class="w-14 h-14 bg-gradient-to-br from-[#002B5B] to-[#001F3F] rounded-2xl flex items-center justify-center mr-4 flex-shrink-0">
+                                class="w-14 h-14 bg-gradient-to-br from-[#174C72] to-[#0C2D48] rounded-2xl flex items-center justify-center mr-4 flex-shrink-0">
                                 <svg class="w-7 h-7 text-[#ffffff]" fill="currentColor" viewBox="0 0 24 24"
                                     aria-label="LinkedIn" xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -228,7 +228,7 @@
                                 </svg>
                             </div>
                             <div>
-                                <h3 class="text-xl font-semibold text-[#001F3F] mb-2 uppercase">Delhi NCR & Mumbai
+                                <h3 class="text-xl font-semibold text-[#0C2D48] mb-2 uppercase"> Mumbai
                                     Locations</h3>
                                 <p class="text-[#333333]">Mumbai</p>
                             </div>
@@ -249,7 +249,7 @@
 
 
     <!-- FOOTER -->
-    <footer class="bg-[#001F3F] text-white py-16">
+    <footer class="bg-[#0C2D48] text-white py-16">
         <div class="container mx-auto px-4 lg:px-8">
             <div class="grid md:grid-cols-3 gap-12 mb-12">
                 <div>
@@ -263,17 +263,17 @@
                     <h4 class="text-lg font-semibold mb-4 uppercase">Quick Links</h4>
                     <ul class="space-y-2">
                         <li><a href="index.html"
-                                class="text-gray-300 hover:text-[#FFC107] transition-colors duration-300">Home</a></li>
+                                class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">Home</a></li>
                         <li><a href="about.html"
-                                class="text-gray-300 hover:text-[#FFC107] transition-colors duration-300">About</a></li>
+                                class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">About</a></li>
                         <li><a href="services.html"
-                                class="text-gray-300 hover:text-[#FFC107] transition-colors duration-300">Services</a>
+                                class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">Services</a>
                         </li>
                         <li><a href="journey.html"
-                                class="text-gray-300 hover:text-[#FFC107] transition-colors duration-300">Journey</a>
+                                class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">Journey</a>
                         </li>
                         <li><a href="contact.html"
-                                class="text-gray-300 hover:text-[#FFC107] transition-colors duration-300">Contact</a>
+                                class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -281,29 +281,29 @@
                     <h4 class="text-lg font-semibold mb-4 uppercase">Contact Info</h4>
                     <ul class="space-y-3">
                         <li class="flex items-center">
-                            <i data-lucide="phone" class="w-5 h-5 mr-3 text-[#FFC107]"></i>
+                            <i data-lucide="phone" class="w-5 h-5 mr-3 text-[#D99024]"></i>
                             <a href="tel:+917838837590"
-                                class="text-gray-300 hover:text-[#FFC107] transition-colors duration-300">+91
+                                class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">+91
                                 7838837590</a>
                         </li>
                         <li class="flex items-center">
-                            <i data-lucide="mail" class="w-5 h-5 mr-3 text-[#FFC107]"></i>
+                            <i data-lucide="mail" class="w-5 h-5 mr-3 text-[#D99024]"></i>
                             <a href="mailto:info@backbridge.in"
-                                class="text-gray-300 hover:text-[#FFC107] transition-colors duration-300">info@backbridge.in</a>
+                                class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">info@backbridge.in</a>
                         </li>
                         <li class="flex items-center">
-                            <i data-lucide="map-pin" class="w-5 h-5 mr-3 text-[#FFC107]"></i>
+                            <i data-lucide="map-pin" class="w-5 h-5 mr-3 text-[#D99024]"></i>
                             <span class="text-gray-300">Delhi NCR, Mumbai</span>
                         </li>
                         <li class="flex items-center">
                             <!-- LinkedIn Icon SVG -->
-                            <svg class="w-5 h-5 mr-3 text-[#FFC107]" fill="currentColor" viewBox="0 0 24 24"
+                            <svg class="w-5 h-5 mr-3 text-[#D99024]" fill="currentColor" viewBox="0 0 24 24"
                                 aria-label="LinkedIn" xmlns="http://www.w3.org/2000/svg">
                                 <path
                                     d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.761 0 5-2.239 5-5v-14c0-2.761-2.239-5-5-5zm-11 19h-3v-10h3v10zm-1.5-11.268c-.966 0-1.75-.782-1.75-1.748 0-.963.782-1.75 1.75-1.75s1.75.787 1.75 1.75c0 .966-.784 1.748-1.75 1.748zm13.5 11.268h-3v-5.604c0-1.336-.025-3.058-1.865-3.058-1.868 0-2.155 1.459-2.155 2.967v5.695h-3v-10h2.881v1.367h.041c.402-.761 1.381-1.561 2.844-1.561 3.042 0 3.604 2.003 3.604 4.605v5.589z" />
                             </svg>
                             <a href="https://www.linkedin.com/company/backbridgesolutions/"
-                                class="text-gray-300 hover:text-[#FFC107] transition-colors duration-300">LinkedIn</a>
+                                class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">LinkedIn</a>
                         </li>
                     </ul>
                 </div>
