--- a/contact.html
+++ b/contact.html
@@ -129,7 +129,8 @@
                                     class="w-full px-4 py-3 border-2 border-gray-200 rounded-2xl focus:border-[#D99024] focus:outline-none transition-colors duration-300">
                             </div>
                             <div>
-                                <label for="phone" class="block text-sm font-semibold text-[#0C2D48] mb-2">Phone *</label>
+                                <label for="phone" class="block text-sm font-semibold text-[#0C2D48] mb-2">Phone
+                                    *</label>
                                 <input type="tel" id="phone" name="phone" required
                                     class="w-full px-4 py-3 border-2 border-gray-200 rounded-2xl focus:border-[#D99024] focus:outline-none transition-colors duration-300">
                             </div>
@@ -206,16 +207,16 @@
                                     <i data-lucide="map-pin" class="w-7 h-7 text-[#0C2D48]"></i>
                                 </div>
                                 <div>
-                                    <h3 class="text-xl font-semibold text-[#0C2D48] mb-2 uppercase"> Mumbai
+                                    <h3 class="text-xl font-semibold text-[#0C2D48] mb-2 uppercase"> 
                                         Locations</h3>
-                                    <p class="text-[#333333]">Delhi NCR, Mumbai</p>
+                                    <p class="text-[#333333]">Mumbai</p>
                                 </div>
                             </div>
                         </div>
                     </div>
 
 
-                    <!-- Location -->
+                    <!-- LinkedIn -->
                     <div
                         class="glass-card bg-white/80 backdrop-blur-md p-6 rounded-2xl shadow-lg hover:shadow-xl transition-all duration-300 hover:-translate-y-1">
                         <div class="flex items-start">
@@ -228,9 +229,10 @@
                                 </svg>
                             </div>
                             <div>
-                                <h3 class="text-xl font-semibold text-[#0C2D48] mb-2 uppercase"> Mumbai
-                                    Locations</h3>
-                                <p class="text-[#333333]">Mumbai</p>
+                                <h3 class="text-xl font-semibold text-[#0C2D48] mb-2 uppercase">LinkedIn</h3>
+
+                                <a href="https://www.linkedin.com/company/backbridgesolutions/"
+                                    class="text-[#333333]">@backbridgesolutions</a>
                             </div>
                         </div>
                     </div>
