Updated website code - latest version

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="images/favicon.jpg">
 
     <style>
         * {
@@ -89,18 +90,14 @@
     <section id="hero" class="min-h-screen flex items-center pt-20 pb-12 relative overflow-hidden">
         <!-- Animated Gradient Background -->
         <div class="absolute inset-0 bg-gradient-to-br from-[#074159] via-[#174C72] to-[#0C2D48]"></div>
-        <div class="absolute inset-0 opacity-20">
-            <div class="absolute top-20 left-10 w-72 h-72 bg-[#D99024] rounded-full blur-3xl animate-pulse"></div>
-            <div class="absolute bottom-20 right-10 w-96 h-96 bg-[#174C72] rounded-full blur-3xl animate-pulse"
-                style="animation-delay: 1s;"></div>
-        </div>
+
 
         <div class="container mx-auto px-4 lg:px-8 relative z-10 py-32">
             <div class="grid md:grid-cols-2 gap-12 items-center">
                 <div class="hero-text text-white">
                     <h1 class="text-4xl md:text-5xl lg:text-6xl font-bold mb-6 leading-tight uppercase tracking-tight"
                         style="font-size: clamp(2rem, 5vw, 2.5rem);">
-                        Transforming Business Operations Through Finance, HR & Compliance Outsourcing
+                        Transforming Business Operations Through Finance, HR & Compliance Solutions
                     </h1>
                     <p class="text-lg md:text-xl mb-8 text-gray-200 leading-relaxed"
                         style="font-size: clamp(1rem, 2vw, 1.25rem);">
@@ -117,8 +114,7 @@
                 </div>
                 <div class="hero-image mt-12 md:mt-0">
                     <div class="relative mx-auto max-w-md md:max-w-none">
-                        <img src="images/1.jpeg"
-                            alt="Business Excellence"
+                        <img src="images/1.jpeg" alt="Business Excellence"
                             class="rounded-2xl shadow-2xl transform hover:scale-105 transition-transform duration-500">
                         <div
                             class="absolute -inset-4 bg-gradient-to-r from-[#D99024] to-[#B8790A] rounded-2xl blur-2xl opacity-30 -z-10">
@@ -135,7 +131,7 @@
             <div class="text-center mb-16 fade-up">
                 <h2 class="text-4xl md:text-5xl font-bold text-[#0C2D48] mb-6 uppercase tracking-tight"
                     style="font-size: clamp(2rem, 4vw, 3rem);">
-                    Crafted with Expertise. Committed to Results.
+                    Crafted with Expertise.<br> Committed to Results.
                 </h2>
             </div>
             <div class="grid md:grid-cols-3 gap-8">
@@ -147,9 +143,10 @@
                         <i data-lucide="dollar-sign" class="w-8 h-8 text-[#0C2D48]"></i>
                     </div>
                     <h3 class="text-2xl font-bold text-[#0C2D48] mb-4 uppercase">Cost Efficiency</h3>
-                    <p class="text-[#333333] leading-relaxed mb-4">Achieve 40% savings through strategic outsourcing
+                    <p class="text-[#333333] leading-relaxed mb-4">Achieve upto 20% savings through strategic
+                        outsourcing
                         and process optimization.</p>
-                    <div class="text-3xl font-bold text-[#D99024]">40%</div>
+                    <div class="text-3xl font-bold text-[#D99024]">20%</div>
                 </div>
 
                 <!-- Operational Accuracy Card -->
@@ -190,9 +187,7 @@
                     style="font-size: clamp(2rem, 4vw, 3rem);">
                     Comprehensive Outsourcing Solutions
                 </h2>
-                <p class="text-lg text-[#333333] max-w-3xl mx-auto">
-                    Comprehensive solutions across Finance, HR, and Compliance
-                </p>
+
             </div>
             <div class="grid md:grid-cols-3 gap-8">
                 <!-- Finance Card -->
@@ -213,7 +208,7 @@
                 </a>
 
                 <!-- HR Card -->
-                <a href="services.html#hr"
+                <a href="services.html#compliance"
                     class="service-card bg-gradient-to-br from-[#174C72] to-[#0C2D48] p-8 rounded-2xl text-white hover:scale-105 transition-all duration-500 shadow-xl hover:shadow-2xl block">
                     <div
                         class="w-16 h-16 bg-white/20 backdrop-blur-sm rounded-2xl flex items-center justify-center mb-6">
@@ -229,7 +224,7 @@
                 </a>
 
                 <!-- Compliance Card -->
-                <a href="services.html#compliance"
+                <a href="services.html#hr"
                     class="service-card bg-gradient-to-br from-[#0C2D48] to-[#174C72] p-8 rounded-2xl text-white hover:scale-105 transition-all duration-500 shadow-xl hover:shadow-2xl block">
                     <div
                         class="w-16 h-16 bg-white/20 backdrop-blur-sm rounded-2xl flex items-center justify-center mb-6">
@@ -340,8 +335,15 @@
             <div class="text-center mb-16">
                 <h2 class="text-4xl md:text-5xl font-bold text-[#0C2D48] mb-6 uppercase tracking-tight"
                     style="font-size: clamp(2rem, 4vw, 3rem);">
-                    Enablement for all size of business                </h2>
-                
+                    Enablement for all size of business </h2>
+
+                <p class="text-lg text-[#333333] max-w-3xl mx-auto">
+                    Comprehensive solutions across Finance, HR, and Compliance
+                </p>We Grow With You
+                Every stage of growth deserves the right support. BACKBRIDGE empowers startups, scale-ups, and
+                enterprises with agile outsourcing solutions that expand as you do—helping you streamline operations,
+                enter new markets, and maintain compliance with confidence. No rigid plans. Just scalable partnership
+
             </div>
             <div class="grid md:grid-cols-3 gap-8">
                 <div
@@ -530,7 +532,10 @@
                             <i data-lucide="phone" class="w-5 h-5 mr-3 text-[#D99024]"></i>
                             <a href="tel:+917838837590"
                                 class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">+91
-                                7838837590</a>
+                                7838837590</a>,
+                            <a href="tel:+919619335552"
+                                class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">+91
+                                9619335552</a>
                         </li>
                         <li class="flex items-center">
                             <i data-lucide="mail" class="w-5 h-5 mr-3 text-[#D99024]"></i>
@@ -554,10 +559,24 @@
                     </ul>
                 </div>
             </div>
-            <div class="border-t border-gray-600 pt-8 text-center">
-                <p class="text-gray-300">
-                    © 2025 Backbridge Integrated Solutions LLP. All rights reserved.
-                </p>
+            <div class="border-t border-gray-600 pt-8">
+                <div class="flex flex-col md:flex-row items-center md:justify-between gap-4">
+                    <p class="text-gray-300 text-center md:text-left">
+                        © 2025 Backbridge Integrated Solutions LLP. All rights reserved.
+                    </p>
+                    <div class="flex flex-wrap justify-center md:justify-end gap-4 text-sm">
+                        <a href="privacy-policy.html" target="_blank" rel="noopener"
+                            class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">Privacy Policy</a>
+                        <a href="terms-and-conditions.html" target="_blank" rel="noopener"
+                            class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">Terms &amp; Conditions</a>
+                        <a href="disclaimer.html" target="_blank" rel="noopener"
+                            class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">Disclaimer</a>
+                        <a href="cookie-policy.html" target="_blank" rel="noopener"
+                            class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">Cookie Policy</a>
+                        <a href="company-profile.html" target="_blank" rel="noopener"
+                            class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">Company Profile</a>
+                    </div>
+                </div>
             </div>
         </div>
     </footer>
