--- a/about.html
+++ b/about.html
@@ -28,6 +28,7 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="images/favicon.jpg">
 
     <style>
         * {
@@ -88,10 +89,7 @@
     <!-- HERO SECTION -->
     <section class="hero-section relative overflow-hidden min-h-[60vh] flex items-center">
         <div class="absolute inset-0 bg-gradient-to-br from-[#0C2D48] via-[#174C72] to-[#0C2D48]"></div>
-        <div class="absolute inset-0 opacity-20">
-            <div class="absolute top-20 left-10 w-72 h-72 bg-[#D99024] rounded-full blur-3xl"></div>
-            <div class="absolute bottom-20 right-10 w-96 h-96 bg-[#174C72] rounded-full blur-3xl"></div>
-        </div>
+        
         <div class="container mx-auto px-4 lg:px-8 relative z-10 py-32 md:py-40">
             <div class="text-center text-white fade-up">
                 <h1 class="text-4xl md:text-5xl lg:text-6xl font-bold mb-6 uppercase tracking-tight"
@@ -212,7 +210,7 @@
                     <p class="text-[#333333] leading-relaxed">
                         To be the trusted global partner for organizations
                         seeking to transform their operations through
-                        intelligent outsourcing driving efficiency,
+                        intelligent outsourcing-driving efficiency,
                         compliance, and sustainable growth. </p>
                 </div>
             </div>
@@ -356,7 +354,10 @@
                             <i data-lucide="phone" class="w-5 h-5 mr-3 text-[#D99024]"></i>
                             <a href="tel:+917838837590"
                                 class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">+91
-                                7838837590</a>
+                                7838837590</a>,
+                            <a href="tel:+919619335552"
+                                class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">+91
+                                9619335552</a>
                         </li>
                         <li class="flex items-center">
                             <i data-lucide="mail" class="w-5 h-5 mr-3 text-[#D99024]"></i>
@@ -381,11 +382,24 @@
                     </ul>
                 </div>
             </div>
-            <div class="border-t border-gray-600 pt-8 text-center">
-                <p class="text-gray-300">
-                    © 2025 Backbridge Integrated Solutions LLP. All rights
-                    reserved.
-                </p>
+            <div class="border-t border-gray-600 pt-8">
+                <div class="flex flex-col md:flex-row items-center md:justify-between gap-4">
+                    <p class="text-gray-300 text-center md:text-left">
+                        © 2025 Backbridge Integrated Solutions LLP. All rights reserved.
+                    </p>
+                    <div class="flex flex-wrap justify-center md:justify-end gap-4 text-sm">
+                        <a href="privacy-policy.html" target="_blank" rel="noopener"
+                            class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">Privacy Policy</a>
+                        <a href="terms-and-conditions.html" target="_blank" rel="noopener"
+                            class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">Terms &amp; Conditions</a>
+                        <a href="disclaimer.html" target="_blank" rel="noopener"
+                            class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">Disclaimer</a>
+                        <a href="cookie-policy.html" target="_blank" rel="noopener"
+                            class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">Cookie Policy</a>
+                        <a href="company-profile.html" target="_blank" rel="noopener"
+                            class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">Company Profile</a>
+                    </div>
+                </div>
             </div>
         </div>
     </footer>
