--- a/index.html
+++ b/index.html
@@ -560,11 +560,11 @@
                 </div>
             </div>
             <div class="border-t border-gray-600 pt-8">
-                <div class="flex flex-col md:flex-row items-center md:justify-between gap-4">
+                <div class="flex flex-col items-center md:justify-between gap-4">
                     <p class="text-gray-300 text-center md:text-left">
                         © 2025 Backbridge Integrated Solutions LLP. All rights reserved.
                     </p>
-                    <div class="flex flex-wrap justify-center md:justify-end gap-4 text-sm">
+                    <div class="legal-links flex flex-col sm:flex-row sm:justify-end sm:items-center gap-3 sm:gap-6 text-sm text-center sm:text-right">
                         <a href="privacy-policy.html" target="_blank" rel="noopener"
                             class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">Privacy Policy</a>
                         <a href="terms-and-conditions.html" target="_blank" rel="noopener"
