Updated website code - latest version

--- a/about.html
+++ b/about.html
@@ -399,11 +399,16 @@
                             <i data-lucide="phone" class="w-5 h-5 mr-3 text-[#D99024]"></i>
                             <a href="tel:+917838837590"
                                 class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">+91
-                                7838837590</a>,
+                                7838837590</a>
+                        </li>
+
+                        <li class="flex items-center">
+                            <i data-lucide="phone" class="w-5 h-5 mr-3 text-[#D99024]"></i>
                             <a href="tel:+919619335552"
                                 class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">+91
                                 9619335552</a>
                         </li>
+
                         <li class="flex items-center">
                             <i data-lucide="mail" class="w-5 h-5 mr-3 text-[#D99024]"></i>
                             <a href="mailto:info@backbridge.in"
