--- a/index.html
+++ b/index.html
@@ -532,7 +532,11 @@
                             <i data-lucide="phone" class="w-5 h-5 mr-3 text-[#D99024]"></i>
                             <a href="tel:+917838837590"
                                 class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">+91
-                                7838837590</a>,
+                                7838837590</a>
+                        </li>
+
+                        <li class="flex items-center">
+                            <i data-lucide="phone" class="w-5 h-5 mr-3 text-[#D99024]"></i>
                             <a href="tel:+919619335552"
                                 class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">+91
                                 9619335552</a>
@@ -564,17 +568,20 @@
                     <p class="text-gray-300 text-center md:text-left">
                         © 2025 Backbridge Integrated Solutions LLP. All rights reserved.
                     </p>
-                    <div class="legal-links flex flex-col sm:flex-row sm:justify-end sm:items-center gap-3 sm:gap-6 text-sm text-center sm:text-right">
+                    <div
+                        class="legal-links flex flex-col sm:flex-row sm:justify-end sm:items-center gap-3 sm:gap-6 text-sm text-center sm:text-right">
                         <a href="privacy-policy.html" target="_blank" rel="noopener"
                             class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">Privacy Policy</a>
                         <a href="terms-and-conditions.html" target="_blank" rel="noopener"
-                            class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">Terms &amp; Conditions</a>
+                            class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">Terms &amp;
+                            Conditions</a>
                         <a href="disclaimer.html" target="_blank" rel="noopener"
                             class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">Disclaimer</a>
                         <a href="cookie-policy.html" target="_blank" rel="noopener"
                             class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">Cookie Policy</a>
                         <a href="company-profile.html" target="_blank" rel="noopener"
-                            class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">Company Profile</a>
+                            class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">Company
+                            Profile</a>
                     </div>
                 </div>
             </div>
