--- a/contact.html
+++ b/contact.html
@@ -257,12 +257,14 @@
                 <div>
                     <h3 class="text-2xl font-bold mb-4 uppercase">Backbridge</h3>
                     <p class="text-gray-300 leading-relaxed">
-                        We Deliver integrated outsourcing solutions across Finance, HR, and Compliance —
+                        We Deliver integrated outsourcing solutions across
+                        Finance, HR, and Compliance —
                         powered by automation and human expertise.
                     </p>
                 </div>
                 <div>
-                    <h4 class="text-lg font-semibold mb-4 uppercase">Quick Links</h4>
+                    <h4 class="text-lg font-semibold mb-4 uppercase">Quick
+                        Links</h4>
                     <ul class="space-y-2">
                         <li><a href="index.html"
                                 class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">Home</a></li>
@@ -280,17 +282,23 @@
                     </ul>
                 </div>
                 <div>
-                    <h4 class="text-lg font-semibold mb-4 uppercase">Contact Info</h4>
+                    <h4 class="text-lg font-semibold mb-4 uppercase">Contact
+                        Info</h4>
                     <ul class="space-y-3">
                         <li class="flex items-center">
                             <i data-lucide="phone" class="w-5 h-5 mr-3 text-[#D99024]"></i>
                             <a href="tel:+917838837590"
                                 class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">+91
-                                7838837590</a>,
+                                7838837590</a>
+                        </li>
+
+                        <li class="flex items-center">
+                            <i data-lucide="phone" class="w-5 h-5 mr-3 text-[#D99024]"></i>
                             <a href="tel:+919619335552"
                                 class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">+91
                                 9619335552</a>
                         </li>
+
                         <li class="flex items-center">
                             <i data-lucide="mail" class="w-5 h-5 mr-3 text-[#D99024]"></i>
                             <a href="mailto:info@backbridge.in"
@@ -298,7 +306,8 @@
                         </li>
                         <li class="flex items-center">
                             <i data-lucide="map-pin" class="w-5 h-5 mr-3 text-[#D99024]"></i>
-                            <span class="text-gray-300">Delhi NCR, Mumbai</span>
+                            <span class="text-gray-300">Delhi NCR,
+                                Mumbai</span>
                         </li>
                         <li class="flex items-center">
                             <!-- LinkedIn Icon SVG -->
@@ -318,23 +327,24 @@
                     <p class="text-gray-300 text-center md:text-left">
                         © 2025 Backbridge Integrated Solutions LLP. All rights reserved.
                     </p>
-                    <div class="legal-links flex flex-col sm:flex-row sm:justify-end sm:items-center gap-3 sm:gap-6 text-sm text-center sm:text-right">
+                    <div class="flex flex-wrap justify-center md:justify-end gap-4 text-sm">
                         <a href="privacy-policy.html" target="_blank" rel="noopener"
                             class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">Privacy Policy</a>
                         <a href="terms-and-conditions.html" target="_blank" rel="noopener"
-                            class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">Terms &amp; Conditions</a>
+                            class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">Terms &amp;
+                            Conditions</a>
                         <a href="disclaimer.html" target="_blank" rel="noopener"
                             class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">Disclaimer</a>
                         <a href="cookie-policy.html" target="_blank" rel="noopener"
                             class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">Cookie Policy</a>
                         <a href="company-profile.html" target="_blank" rel="noopener"
-                            class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">Company Profile</a>
+                            class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">Company
+                            Profile</a>
                     </div>
                 </div>
             </div>
         </div>
     </footer>
-
 
     <!-- Custom JavaScript -->
     <script src="script.js"></script>
