--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -131,18 +131,22 @@
         </div>
     </main>
 
+
+    <!-- FOOTER -->
     <footer class="bg-[#0C2D48] text-white py-16">
         <div class="container mx-auto px-4 lg:px-8">
             <div class="grid md:grid-cols-3 gap-12 mb-12">
                 <div>
                     <h3 class="text-2xl font-bold mb-4 uppercase">Backbridge</h3>
                     <p class="text-gray-300 leading-relaxed">
-                        We deliver integrated outsourcing solutions across Finance, HR, and Compliance —
+                        We Deliver integrated outsourcing solutions across
+                        Finance, HR, and Compliance —
                         powered by automation and human expertise.
                     </p>
                 </div>
                 <div>
-                    <h4 class="text-lg font-semibold mb-4 uppercase">Quick Links</h4>
+                    <h4 class="text-lg font-semibold mb-4 uppercase">Quick
+                        Links</h4>
                     <ul class="space-y-2">
                         <li><a href="index.html"
                                 class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">Home</a></li>
@@ -160,13 +164,23 @@
                     </ul>
                 </div>
                 <div>
-                    <h4 class="text-lg font-semibold mb-4 uppercase">Contact Info</h4>
+                    <h4 class="text-lg font-semibold mb-4 uppercase">Contact
+                        Info</h4>
                     <ul class="space-y-3">
                         <li class="flex items-center">
                             <i data-lucide="phone" class="w-5 h-5 mr-3 text-[#D99024]"></i>
                             <a href="tel:+917838837590"
-                                class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">+91 7838837590</a>
+                                class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">+91
+                                7838837590</a>
                         </li>
+
+                        <li class="flex items-center">
+                            <i data-lucide="phone" class="w-5 h-5 mr-3 text-[#D99024]"></i>
+                            <a href="tel:+919619335552"
+                                class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">+91
+                                9619335552</a>
+                        </li>
+
                         <li class="flex items-center">
                             <i data-lucide="mail" class="w-5 h-5 mr-3 text-[#D99024]"></i>
                             <a href="mailto:info@backbridge.in"
@@ -174,15 +188,17 @@
                         </li>
                         <li class="flex items-center">
                             <i data-lucide="map-pin" class="w-5 h-5 mr-3 text-[#D99024]"></i>
-                            <span class="text-gray-300">Delhi NCR, Mumbai</span>
+                            <span class="text-gray-300">Delhi NCR,
+                                Mumbai</span>
                         </li>
                         <li class="flex items-center">
+                            <!-- LinkedIn Icon SVG -->
                             <svg class="w-5 h-5 mr-3 text-[#D99024]" fill="currentColor" viewBox="0 0 24 24"
                                 aria-label="LinkedIn" xmlns="http://www.w3.org/2000/svg">
                                 <path
                                     d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.761 0 5-2.239 5-5v-14c0-2.761-2.239-5-5-5zm-11 19h-3v-10h3v10zm-1.5-11.268c-.966 0-1.75-.782-1.75-1.748 0-.963.782-1.75 1.75-1.75s1.75.787 1.75 1.75c0 .966-.784 1.748-1.75 1.748zm13.5 11.268h-3v-5.604c0-1.336-.025-3.058-1.865-3.058-1.868 0-2.155 1.459-2.155 2.967v5.695h-3v-10h2.881v1.367h.041c.402-.761 1.381-1.561 2.844-1.561 3.042 0 3.604 2.003 3.604 4.605v5.589z" />
                             </svg>
-                            <a href="https://www.linkedin.com/company/backbridgesolutions/" target="_blank" rel="noopener"
+                            <a href="https://www.linkedin.com/company/backbridgesolutions/"
                                 class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">LinkedIn</a>
                         </li>
                     </ul>
@@ -193,23 +209,24 @@
                     <p class="text-gray-300 text-center md:text-left">
                         © 2025 Backbridge Integrated Solutions LLP. All rights reserved.
                     </p>
-                    <div class="legal-links flex flex-col sm:flex-row sm:justify-end sm:items-center gap-3 sm:gap-6 text-sm text-center sm:text-right">
+                    <div class="flex flex-wrap justify-center md:justify-end gap-4 text-sm">
                         <a href="privacy-policy.html" target="_blank" rel="noopener"
                             class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">Privacy Policy</a>
                         <a href="terms-and-conditions.html" target="_blank" rel="noopener"
-                            class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">Terms &amp; Conditions</a>
+                            class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">Terms &amp;
+                            Conditions</a>
                         <a href="disclaimer.html" target="_blank" rel="noopener"
                             class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">Disclaimer</a>
                         <a href="cookie-policy.html" target="_blank" rel="noopener"
                             class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">Cookie Policy</a>
                         <a href="company-profile.html" target="_blank" rel="noopener"
-                            class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">Company Profile</a>
+                            class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">Company
+                            Profile</a>
                     </div>
                 </div>
             </div>
         </div>
     </footer>
-
     <script src="script.js"></script>
 </body>
 
