--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -43,11 +43,14 @@
                     <img src="images/Logo-png.png" alt="Backbridge Logo" class="h-12 md:h-14 w-auto">
                 </a>
                 <div class="hidden md:flex items-center space-x-8">
-                    <a href="index.html" class="text-[#333333] hover:text-[#D99024] transition-colors duration-300">Home</a>
-                    <a href="about.html" class="text-[#333333] hover:text-[#D99024] transition-colors duration-300">About</a>
+                    <a href="index.html"
+                        class="text-[#333333] hover:text-[#D99024] transition-colors duration-300">Home</a>
+                    <a href="about.html"
+                        class="text-[#333333] hover:text-[#D99024] transition-colors duration-300">About</a>
                     <a href="services.html"
                         class="text-[#333333] hover:text-[#D99024] transition-colors duration-300">Services</a>
-                    <a href="journey.html" class="text-[#333333] hover:text-[#D99024] transition-colors duration-300">Journey</a>
+                    <a href="journey.html"
+                        class="text-[#333333] hover:text-[#D99024] transition-colors duration-300">Journey</a>
                 </div>
                 <a href="contact.html"
                     class="hidden md:block bg-gradient-to-r from-[#D99024] to-[#B8790A] text-[#0C2D48] px-6 py-2.5 rounded-full font-semibold text-sm hover:shadow-lg hover:scale-105 transition-all duration-300">
@@ -60,16 +63,19 @@
             <div id="mobile-menu" class="hidden md:hidden mt-4 space-y-2 pb-4">
                 <a href="index.html" class="block text-[#333333] py-2 hover:text-[#D99024] transition-colors">Home</a>
                 <a href="about.html" class="block text-[#333333] py-2 hover:text-[#D99024] transition-colors">About</a>
-                <a href="services.html" class="block text-[#333333] py-2 hover:text-[#D99024] transition-colors">Services</a>
-                <a href="journey.html" class="block text-[#333333] py-2 hover:text-[#D99024] transition-colors">Journey</a>
-                <a href="contact.html" class="block text-[#333333] py-2 hover:text-[#D99024] transition-colors">Contact</a>
+                <a href="services.html"
+                    class="block text-[#333333] py-2 hover:text-[#D99024] transition-colors">Services</a>
+                <a href="journey.html"
+                    class="block text-[#333333] py-2 hover:text-[#D99024] transition-colors">Journey</a>
+                <a href="contact.html"
+                    class="block text-[#333333] py-2 hover:text-[#D99024] transition-colors">Contact</a>
             </div>
         </nav>
     </header>
 
     <section class="hero-section relative overflow-hidden min-h-[50vh] flex items-center">
         <div class="absolute inset-0 bg-gradient-to-br from-[#0C2D48] via-[#174C72] to-[#0C2D48]"></div>
-      
+
         <div class="container mx-auto px-4 lg:px-8 relative z-10 py-32 md:py-40">
             <div class="text-center text-white fade-up">
                 <h1 class="text-4xl md:text-5xl font-bold mb-6 uppercase tracking-tight">Privacy Policy</h1>
@@ -90,12 +96,17 @@
             </section>
             <section>
                 <h2 class="text-2xl font-bold text-[#0C2D48] mb-4">1. Introduction</h2>
-                <p class="text-[#333333]">BackBridge Integrated Solutions LLP (“BackBridge”, “we”, “our”, or “us”) respects your privacy and is committed to protecting your personal information. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you visit our website or interact with us in connection with our services, including accounting, HR, payroll, and compliance solutions. By using this website, you consent to the practices described in this Policy.</p>
+                <p class="text-[#333333]">BackBridge Integrated Solutions LLP (“BackBridge”, “we”, “our”, or “us”)
+                    respects your privacy and is committed to protecting your personal information. This Privacy Policy
+                    explains how we collect, use, disclose, and safeguard your information when you visit our website or
+                    interact with us in connection with our services, including accounting, HR, payroll, and compliance
+                    solutions. By using this website, you consent to the practices described in this Policy.</p>
             </section>
             <section>
                 <h2 class="text-2xl font-bold text-[#0C2D48] mb-4">2. Information We Collect</h2>
                 <h3 class="text-xl font-semibold text-[#0C2D48] mb-2">A. Personal Information</h3>
-                <p class="text-[#333333]">Information that can identify you personally, including but not limited to:</p>
+                <p class="text-[#333333]">Information that can identify you personally, including but not limited to:
+                </p>
                 <ul class="list-disc list-inside text-[#333333] space-y-2">
                     <li>Name, company name, designation</li>
                     <li>Email address, phone number</li>
@@ -110,7 +121,8 @@
                     <li>Pages visited, time spent on site, and referral source</li>
                 </ul>
                 <h3 class="text-xl font-semibold text-[#0C2D48] mt-6 mb-2">C. Cookies and Tracking Technologies</h3>
-                <p class="text-[#333333]">We use cookies and similar technologies to improve your browsing experience and analyze website traffic. You may choose to disable cookies through your browser settings.</p>
+                <p class="text-[#333333]">We use cookies and similar technologies to improve your browsing experience
+                    and analyze website traffic. You may choose to disable cookies through your browser settings.</p>
             </section>
             <section>
                 <h2 class="text-2xl font-bold text-[#0C2D48] mb-4">3. How We Use Your Information</h2>
@@ -135,21 +147,27 @@
             </section>
             <section>
                 <h2 class="text-2xl font-bold text-[#0C2D48] mb-4">5. Sharing and Disclosure of Information</h2>
-                <p class="text-[#333333]">We do not sell or rent your personal data. However, we may share information with:</p>
+                <p class="text-[#333333]">We do not sell or rent your personal data. However, we may share information
+                    with:</p>
                 <ul class="list-disc list-inside text-[#333333] space-y-2">
                     <li>Our employees and authorized partners for business operations</li>
-                    <li>Service providers or consultants engaged to support our operations (e.g., IT support, cloud hosting)</li>
+                    <li>Service providers or consultants engaged to support our operations (e.g., IT support, cloud
+                        hosting)</li>
                     <li>Regulatory authorities or government bodies when required by law</li>
                 </ul>
                 <p class="text-[#333333]">All such parties are bound by confidentiality obligations.</p>
             </section>
             <section>
                 <h2 class="text-2xl font-bold text-[#0C2D48] mb-4">6. Data Retention</h2>
-                <p class="text-[#333333]">We retain personal information only as long as necessary for the purposes for which it was collected, or as required by applicable laws, whichever is longer.</p>
+                <p class="text-[#333333]">We retain personal information only as long as necessary for the purposes for
+                    which it was collected, or as required by applicable laws, whichever is longer.</p>
             </section>
             <section>
                 <h2 class="text-2xl font-bold text-[#0C2D48] mb-4">7. Data Security</h2>
-                <p class="text-[#333333]">We implement appropriate technical and organizational measures to protect your personal information from unauthorized access, loss, misuse, alteration, or destruction. While we strive for full security, no electronic transmission is completely secure, and we cannot guarantee absolute protection.</p>
+                <p class="text-[#333333]">We implement appropriate technical and organizational measures to protect your
+                    personal information from unauthorized access, loss, misuse, alteration, or destruction. While we
+                    strive for full security, no electronic transmission is completely secure, and we cannot guarantee
+                    absolute protection.</p>
             </section>
             <section>
                 <h2 class="text-2xl font-bold text-[#0C2D48] mb-4">8. Your Rights</h2>
@@ -160,27 +178,34 @@
                     <li>Withdraw consent for data processing</li>
                     <li>Object to or restrict processing</li>
                 </ul>
-                <p class="text-[#333333]">You can exercise these rights by writing to us at <a href="mailto:info@backbridge.in"
-                        class="text-[#D99024] hover:underline">info@backbridge.in</a>.</p>
+                <p class="text-[#333333]">You can exercise these rights by writing to us at <a
+                        href="mailto:info@backbridge.in" class="text-[#D99024] hover:underline">info@backbridge.in</a>.
+                </p>
             </section>
             <section>
                 <h2 class="text-2xl font-bold text-[#0C2D48] mb-4">9. Links to Other Websites</h2>
-                <p class="text-[#333333]">Our website may contain links to third-party websites. We are not responsible for their content or privacy practices. We encourage you to review their policies before sharing any information.</p>
+                <p class="text-[#333333]">Our website may contain links to third-party websites. We are not responsible
+                    for their content or privacy practices. We encourage you to review their policies before sharing any
+                    information.</p>
             </section>
             <section>
                 <h2 class="text-2xl font-bold text-[#0C2D48] mb-4">10. Updates to This Policy</h2>
-                <p class="text-[#333333]">We may update this Privacy Policy periodically to reflect changes in legal, technical, or business developments.</p>
+                <p class="text-[#333333]">We may update this Privacy Policy periodically to reflect changes in legal,
+                    technical, or business developments.</p>
             </section>
             <section>
                 <h2 class="text-2xl font-bold text-[#0C2D48] mb-4">11. Grievance Redressal</h2>
-                <p class="text-[#333333]">For any privacy-related concerns, please contact:<br>Email: <a href="mailto:info@backbridge.in"
-                        class="text-[#D99024] hover:underline">info@backbridge.in</a></p>
+                <p class="text-[#333333]">For any privacy-related concerns, please contact:<br>Email: <a
+                        href="mailto:info@backbridge.in" class="text-[#D99024] hover:underline">info@backbridge.in</a>
+                </p>
                 <p class="text-[#333333]">We will aim to resolve your concerns in accordance with applicable law.</p>
             </section>
             <section>
                 <h2 class="text-2xl font-bold text-[#0C2D48] mb-4">12. Contact Us</h2>
-                <p class="text-[#333333]">For any questions or clarifications about this Privacy Policy or our data practices, please contact:<br>
-                    📧 <a href="mailto:info@backbridge.in" class="text-[#D99024] hover:underline">info@backbridge.in</a><br>
+                <p class="text-[#333333]">For any questions or clarifications about this Privacy Policy or our data
+                    practices, please contact:<br>
+                    📧 <a href="mailto:info@backbridge.in"
+                        class="text-[#D99024] hover:underline">info@backbridge.in</a><br>
                     🌐 <a href="https://www.backbridgesolutions.com" target="_blank" rel="noopener"
                         class="text-[#D99024] hover:underline">www.backbridgesolutions.com</a>
                 </p>
@@ -188,18 +213,22 @@
         </div>
     </main>
 
+
+    <!-- FOOTER -->
     <footer class="bg-[#0C2D48] text-white py-16">
         <div class="container mx-auto px-4 lg:px-8">
             <div class="grid md:grid-cols-3 gap-12 mb-12">
                 <div>
                     <h3 class="text-2xl font-bold mb-4 uppercase">Backbridge</h3>
                     <p class="text-gray-300 leading-relaxed">
-                        We deliver integrated outsourcing solutions across Finance, HR, and Compliance —
+                        We Deliver integrated outsourcing solutions across
+                        Finance, HR, and Compliance —
                         powered by automation and human expertise.
                     </p>
                 </div>
                 <div>
-                    <h4 class="text-lg font-semibold mb-4 uppercase">Quick Links</h4>
+                    <h4 class="text-lg font-semibold mb-4 uppercase">Quick
+                        Links</h4>
                     <ul class="space-y-2">
                         <li><a href="index.html"
                                 class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">Home</a></li>
@@ -217,13 +246,23 @@
                     </ul>
                 </div>
                 <div>
-                    <h4 class="text-lg font-semibold mb-4 uppercase">Contact Info</h4>
+                    <h4 class="text-lg font-semibold mb-4 uppercase">Contact
+                        Info</h4>
                     <ul class="space-y-3">
                         <li class="flex items-center">
                             <i data-lucide="phone" class="w-5 h-5 mr-3 text-[#D99024]"></i>
                             <a href="tel:+917838837590"
-                                class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">+91 7838837590</a>
+                                class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">+91
+                                7838837590</a>
                         </li>
+
+                        <li class="flex items-center">
+                            <i data-lucide="phone" class="w-5 h-5 mr-3 text-[#D99024]"></i>
+                            <a href="tel:+919619335552"
+                                class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">+91
+                                9619335552</a>
+                        </li>
+
                         <li class="flex items-center">
                             <i data-lucide="mail" class="w-5 h-5 mr-3 text-[#D99024]"></i>
                             <a href="mailto:info@backbridge.in"
@@ -231,15 +270,17 @@
                         </li>
                         <li class="flex items-center">
                             <i data-lucide="map-pin" class="w-5 h-5 mr-3 text-[#D99024]"></i>
-                            <span class="text-gray-300">Delhi NCR, Mumbai</span>
+                            <span class="text-gray-300">Delhi NCR,
+                                Mumbai</span>
                         </li>
                         <li class="flex items-center">
+                            <!-- LinkedIn Icon SVG -->
                             <svg class="w-5 h-5 mr-3 text-[#D99024]" fill="currentColor" viewBox="0 0 24 24"
                                 aria-label="LinkedIn" xmlns="http://www.w3.org/2000/svg">
                                 <path
                                     d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.761 0 5-2.239 5-5v-14c0-2.761-2.239-5-5-5zm-11 19h-3v-10h3v10zm-1.5-11.268c-.966 0-1.75-.782-1.75-1.748 0-.963.782-1.75 1.75-1.75s1.75.787 1.75 1.75c0 .966-.784 1.748-1.75 1.748zm13.5 11.268h-3v-5.604c0-1.336-.025-3.058-1.865-3.058-1.868 0-2.155 1.459-2.155 2.967v5.695h-3v-10h2.881v1.367h.041c.402-.761 1.381-1.561 2.844-1.561 3.042 0 3.604 2.003 3.604 4.605v5.589z" />
                             </svg>
-                            <a href="https://www.linkedin.com/company/backbridgesolutions/" target="_blank" rel="noopener"
+                            <a href="https://www.linkedin.com/company/backbridgesolutions/"
                                 class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">LinkedIn</a>
                         </li>
                     </ul>
@@ -250,23 +291,24 @@
                     <p class="text-gray-300 text-center md:text-left">
                         © 2025 Backbridge Integrated Solutions LLP. All rights reserved.
                     </p>
-                    <div class="legal-links flex flex-col sm:flex-row sm:justify-end sm:items-center gap-3 sm:gap-6 text-sm text-center sm:text-right">
+                    <div class="flex flex-wrap justify-center md:justify-end gap-4 text-sm">
                         <a href="privacy-policy.html" target="_blank" rel="noopener"
                             class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">Privacy Policy</a>
                         <a href="terms-and-conditions.html" target="_blank" rel="noopener"
-                            class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">Terms &amp; Conditions</a>
+                            class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">Terms &amp;
+                            Conditions</a>
                         <a href="disclaimer.html" target="_blank" rel="noopener"
                             class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">Disclaimer</a>
                         <a href="cookie-policy.html" target="_blank" rel="noopener"
                             class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">Cookie Policy</a>
                         <a href="company-profile.html" target="_blank" rel="noopener"
-                            class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">Company Profile</a>
+                            class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">Company
+                            Profile</a>
                     </div>
                 </div>
             </div>
         </div>
     </footer>
-
     <script src="script.js"></script>
 </body>
 
