--- a/services.html
+++ b/services.html
@@ -291,7 +291,8 @@
                     <div class="space-y-4">
                         <details class="accordion-card">
                             <summary>
-                                <span class="flex items-center text-xl font-semibold tracking-wide uppercase text-[#D99024]">
+                                <span
+                                    class="flex items-center text-xl font-semibold tracking-wide uppercase text-[#D99024]">
                                     <i data-lucide="square-check" class="w-6 h-6 mr-3"></i>
                                     HR Outsourcing
                                 </span>
@@ -310,7 +311,8 @@
 
                         <details class="accordion-card">
                             <summary>
-                                <span class="flex items-center text-xl font-semibold tracking-wide uppercase text-[#D99024]">
+                                <span
+                                    class="flex items-center text-xl font-semibold tracking-wide uppercase text-[#D99024]">
                                     <i data-lucide="square-check" class="w-6 h-6 mr-3"></i>
                                     Learning &amp; Development
                                 </span>
@@ -328,7 +330,8 @@
 
                         <details class="accordion-card">
                             <summary>
-                                <span class="flex items-center text-xl font-semibold tracking-wide uppercase text-[#D99024]">
+                                <span
+                                    class="flex items-center text-xl font-semibold tracking-wide uppercase text-[#D99024]">
                                     <i data-lucide="square-check" class="w-6 h-6 mr-3"></i>
                                     Staffing Solutions
                                 </span>
@@ -345,7 +348,8 @@
 
                         <details class="accordion-card">
                             <summary>
-                                <span class="flex items-center text-xl font-semibold tracking-wide uppercase text-[#D99024]">
+                                <span
+                                    class="flex items-center text-xl font-semibold tracking-wide uppercase text-[#D99024]">
                                     <i data-lucide="square-check" class="w-6 h-6 mr-3"></i>
                                     Payroll Administration
                                 </span>
@@ -365,7 +369,8 @@
 
                         <details class="accordion-card">
                             <summary>
-                                <span class="flex items-center text-xl font-semibold tracking-wide uppercase text-[#D99024]">
+                                <span
+                                    class="flex items-center text-xl font-semibold tracking-wide uppercase text-[#D99024]">
                                     <i data-lucide="square-check" class="w-6 h-6 mr-3"></i>
                                     Employee Reimbursements
                                 </span>
@@ -384,7 +389,8 @@
 
                         <details class="accordion-card">
                             <summary>
-                                <span class="flex items-center text-xl font-semibold tracking-wide uppercase text-[#D99024]">
+                                <span
+                                    class="flex items-center text-xl font-semibold tracking-wide uppercase text-[#D99024]">
                                     <i data-lucide="square-check" class="w-6 h-6 mr-3"></i>
                                     HR Audit &amp; Risk Mgt.
                                 </span>
@@ -552,6 +558,7 @@
     </section>
 
 
+
     <!-- FOOTER -->
     <footer class="bg-[#0C2D48] text-white py-16">
         <div class="container mx-auto px-4 lg:px-8">
@@ -559,12 +566,14 @@
                 <div>
                     <h3 class="text-2xl font-bold mb-4 uppercase">Backbridge</h3>
                     <p class="text-gray-300 leading-relaxed">
-                        We Deliver integrated outsourcing solutions across Finance, HR, and Compliance —
+                        We Deliver integrated outsourcing solutions across
+                        Finance, HR, and Compliance —
                         powered by automation and human expertise.
                     </p>
                 </div>
                 <div>
-                    <h4 class="text-lg font-semibold mb-4 uppercase">Quick Links</h4>
+                    <h4 class="text-lg font-semibold mb-4 uppercase">Quick
+                        Links</h4>
                     <ul class="space-y-2">
                         <li><a href="index.html"
                                 class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">Home</a></li>
@@ -582,17 +591,23 @@
                     </ul>
                 </div>
                 <div>
-                    <h4 class="text-lg font-semibold mb-4 uppercase">Contact Info</h4>
+                    <h4 class="text-lg font-semibold mb-4 uppercase">Contact
+                        Info</h4>
                     <ul class="space-y-3">
                         <li class="flex items-center">
                             <i data-lucide="phone" class="w-5 h-5 mr-3 text-[#D99024]"></i>
                             <a href="tel:+917838837590"
                                 class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">+91
-                                7838837590</a>,
+                                7838837590</a>
+                        </li>
+
+                        <li class="flex items-center">
+                            <i data-lucide="phone" class="w-5 h-5 mr-3 text-[#D99024]"></i>
                             <a href="tel:+919619335552"
                                 class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">+91
                                 9619335552</a>
                         </li>
+
                         <li class="flex items-center">
                             <i data-lucide="mail" class="w-5 h-5 mr-3 text-[#D99024]"></i>
                             <a href="mailto:info@backbridge.in"
@@ -600,7 +615,8 @@
                         </li>
                         <li class="flex items-center">
                             <i data-lucide="map-pin" class="w-5 h-5 mr-3 text-[#D99024]"></i>
-                            <span class="text-gray-300">Delhi NCR, Mumbai</span>
+                            <span class="text-gray-300">Delhi NCR,
+                                Mumbai</span>
                         </li>
                         <li class="flex items-center">
                             <!-- LinkedIn Icon SVG -->
@@ -620,11 +636,12 @@
                     <p class="text-gray-300 text-center md:text-left">
                         © 2025 Backbridge Integrated Solutions LLP. All rights reserved.
                     </p>
-                    <div class="legal-links flex flex-col sm:flex-row sm:justify-end sm:items-center gap-3 sm:gap-6 text-sm text-center sm:text-right">
+                    <div class="flex flex-wrap justify-center md:justify-end gap-4 text-sm">
                         <a href="privacy-policy.html" target="_blank" rel="noopener"
                             class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">Privacy Policy</a>
                         <a href="terms-and-conditions.html" target="_blank" rel="noopener"
-                            class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">Terms &amp; Conditions</a>
+                            class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">Terms &amp;
+                            Conditions</a>
                         <a href="disclaimer.html" target="_blank" rel="noopener"
                             class="text-gray-300 hover:text-[#D99024] transition-colors duration-300">Disclaimer</a>
                         <a href="cookie-policy.html" target="_blank" rel="noopener"
@@ -637,7 +654,6 @@
             </div>
         </div>
     </footer>
-
 
     <!-- Custom JavaScript -->
     <script src="script.js"></script>
