--- a/services.html
+++ b/services.html
@@ -615,8 +615,7 @@
                         </li>
                         <li class="flex items-center">
                             <i data-lucide="map-pin" class="w-5 h-5 mr-3 text-[#D99024]"></i>
-                            <span class="text-gray-300">Delhi NCR,
-                                Mumbai</span>
+                            <span class="text-gray-300">Mumbai</span>
                         </li>
                         <li class="flex items-center">
                             <!-- LinkedIn Icon SVG -->
