Update website code

--- a/about.html
+++ b/about.html
@@ -245,9 +245,8 @@
                             CS</p>
                     </div>
                     <p class="text-[#333333] text-sm leading-relaxed text-center">
-                        15+ years of experience in finance operations and
-                        compliance across Tata Digital, Indus Towers,
-                        and Starbucks.
+                        Seasoned finance professional with 15+ years of expertise in streamlining finance operations,
+                        shared services, enabling automation, and leading complex process transitions
                     </p>
                     <!-- <div class="flex justify-center mt-4">
                         <a href="#"
@@ -270,8 +269,8 @@
                         <p class="text-sm text-[#333333] mb-3">CA</p>
                     </div>
                     <p class="text-[#333333] text-sm leading-relaxed text-center">
-                        15+ years in financial reporting and transformation
-                        at Raymond and Reliance Industries.
+                        Finance leader with 15+ years of hands-on experience in driving finance operations, process
+                        transformation, automation initiatives, and creation of scalable workflows with listed entities
                     </p>
                     <!-- <div class="flex justify-center mt-4">
                         <a href="#"
@@ -289,13 +288,12 @@
                             class="w-32 h-32 rounded-full mx-auto mb-4 object-cover border-4 border-[#FFC107] shadow-lg">
                         <h3 class="text-xl font-bold text-[#001F3F]">Garishma
                             Arora</h3>
-                        <p class="text-[#FFC107] font-semibold mb-1">Senior
-                            Consultant</p>
+                        <p class="text-[#FFC107] font-semibold mb-1">Partner</p>
                         <p class="text-sm text-[#333333] mb-3">CS, LLB</p>
                     </div>
                     <p class="text-[#333333] text-sm leading-relaxed text-center">
-                        13 years in corporate law and secretarial compliance
-                        with Vodafone, Genpact, Airworks.
+                        A seasoned corporate law and secretarial compliance expert with 13 years of experience in
+                        managing governance, statutory filings, and regulatory requirements
                     </p>
                     <!-- <div class="flex justify-center mt-4">
                         <a href="#"
@@ -313,14 +311,14 @@
                             class="w-32 h-32 rounded-full mx-auto mb-4 object-cover border-4 border-[#FFC107] shadow-lg">
                         <h3 class="text-xl font-bold text-[#001F3F]">Manish
                             Goyal</h3>
-                        <p class="text-[#FFC107] font-semibold mb-1">Senior
-                            Consultant</p>
+                        <p class="text-[#FFC107] font-semibold mb-1">Partner</p>
                         <p class="text-sm text-[#333333] mb-3">MBA,
                             CA-Inter</p>
                     </div>
                     <p class="text-[#333333] text-sm leading-relaxed text-center">
-                        Specialized in shared services operations with Tata
-                        Communications and Phoenix Group.
+                        Finance professional with over 12 years of experience, specializing in the QSR and Shared
+                        Services industries. Proven track record of managing high-profile clients and delivering
+                        strategic financial solutions that drive operational efficiency and business growth.
                     </p>
                     <!-- <div class="flex justify-center mt-4">
                         <a href="#"
@@ -416,7 +414,7 @@
                         </li>
                         <li class="flex items-center">
                             <i data-lucide="map-pin" class="w-5 h-5 mr-3 text-[#D99024]"></i>
-                            <span class="text-gray-300">Mumbai</span>
+                            <span class="text-gray-300">Mumbai • Delhi NCR</span>
                         </li>
                         <li class="flex items-center">
                             <!-- LinkedIn Icon SVG -->
