--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Backbridge | Get in Touch for Outsourcing Solutions</title>
     <meta name="description"
-        content="Reach out to Backbridge Integrated Solutions LLP for Finance, HR, and Compliance outsourcing inquiries. Offices in Delhi NCR and Mumbai.">
+        content="Reach out to Backbridge Integrated Solutions LLP for Finance, HR, and Compliance outsourcing inquiries. Offices in Delhi NCR and Mumbai • Delhi NCR.">
 
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -209,7 +209,7 @@
                                 <div>
                                     <h3 class="text-xl font-semibold text-[#0C2D48] mb-2 uppercase">
                                         Locations</h3>
-                                    <p class="text-[#333333]">Mumbai</p>
+                                    <p class="text-[#333333]">Mumbai • Delhi NCR</p>
                                 </div>
                             </div>
                         </div>
@@ -236,13 +236,6 @@
                             </div>
                         </div>
                     </div>
-                </div>
-
-
-                <!-- Map Placeholder -->
-                <div class="rounded-2xl overflow-hidden shadow-xl">
-                    <img src="https://images.unsplash.com/photo-1517486808906-6ca8b3f04846?w=600&h=300&fit=crop"
-                        alt="Location Map" class="w-full h-64 object-cover">
                 </div>
             </div>
         </div>
@@ -306,7 +299,7 @@
                         </li>
                         <li class="flex items-center">
                             <i data-lucide="map-pin" class="w-5 h-5 mr-3 text-[#D99024]"></i>
-                            <span class="text-gray-300">Mumbai</span>
+                            <span class="text-gray-300">Mumbai • Delhi NCR</span>
                         </li>
                         <li class="flex items-center">
                             <!-- LinkedIn Icon SVG -->
